--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
           Enroll For Our Varius Onlie Courses <br />
           Anywhere From The World
         </h1>
-        <a href="contect.html" class="hero-btn">CONTACT US</a>
+        <a href="contact.html" class="hero-btn">CONTACT US</a>
       </section>
 
       <!-- --------------- Footer ----------- -->
 
       <section class="footer">
         <p>
-          Hello Everyone, My Name is Dhaval Pandav. I am learning build Web
+          Hello Everyone, My Name is Dharmik Tank. I am learning build Web
           Development. contact Us On Our Social Media
         </p>
         <div class="icons">
@@ -264,8 +264,7 @@
         </div>
         <p class="last">
           <strong
-            >Made With <i class="fa-regular fa-heart"></i> By Dhaval
-            pandav</strong
+            >Made With <i class="fa-regular fa-heart"></i> By Dharmik Tank</strong
           >
         </p>
       </section>
