--- a/collage_student.html
+++ b/collage_student.html
@@ -109,7 +109,7 @@
 
       <section class="footer">
         <p>
-          Hello Everyone, My Name is Dhaval Pandav. I am learning build Web
+          Hello Everyone, My Name is Dharmik Tank. I am learning build Web
           Development. contact Us On Our Social Media
         </p>
         <div class="icons">
@@ -119,10 +119,7 @@
           <a href="index.html" ><i class="fa fa-brands fa-twitter"></i>
         </div>
         <p class="last">
-          <strong
-            >Made With <i class="fa-regular fa-heart"></i> By Dhaval
-            pandav</strong
-          >
+          <strong>Made With <i class="fa-regular fa-heart"></i> By Dharmik Tank</strong>
         </p>
       </section>
     </div>
