--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
 
       <section class="footer">
         <p>
-          Hello Everyone, My Name is Dhaval Pandav. I am learning build Web
+          Hello Everyone, My Name is Dharmik Tank. I am learning build Web
           Development. contact Us On Our Social Media
         </p>
         <div class="icons">
@@ -156,8 +156,7 @@
         </div>
         <p class="last">
           <strong
-            >Made With <i class="fa-regular fa-heart"></i> By Dhaval
-            pandav</strong
+            >Made With <i class="fa-regular fa-heart"></i> By Dharmik Tank</strong
           >
         </p>
       </section>
